@@ -37,7 +37,7 @@ library
         base == 4.*, process, filepath, directory, mtl, containers,
         hscolour == 1.16.*,
         cpphs == 1.11.*,
-        haskell-src-exts == 1.8.* && >= 1.8.2,
+        haskell-src-exts == 1.9.*,
         uniplate == 1.5.*
 
     ghc-options:        -fno-warn-overlapping-patterns
