@@ -1,5 +1,6 @@
 Changelog for HLint
 
+    Upgrade to haskell-src-exts-1.9
     #303, allow fixities to be specified in hint files
 1.6.21
     #287, warn about Haskell 98 imports
